# simple_pcd_viewer

./: .gitignore  README.md  main.py  pyproject.toml
example/apollo_detection/: benign.txt  detection_bbox_provider.py  main.py  parse_detection.py
example/apollo_detection/benign/: benign_0000.pcd  benign_0001.pcd  benign_0002.pcd  benign_0003.pcd  benign_0004.pcd  benign_0005.pcd  benign_0006.pcd  benign_0007.pcd  benign_0008.pcd  benign_0009.pcd  benign_0010.pcd  benign_0011.pcd  benign_0012.pcd  benign_0013.pcd  benign_0014.pcd  benign_0015.pcd  benign_0016.pcd  benign_0017.pcd  benign_0018.pcd  benign_0019.pcd  benign_0020.pcd
example/play_csv/: main.py
example/play_csv/A/: A_0000.csv  A_0001.csv  A_0002.csv  A_0003.csv  A_0004.csv  A_0005.csv  A_0006.csv  A_0007.csv  A_0008.csv  A_0009.csv
example/single/: show_csv.py  show_df.py  show_numpy.py  show_pcd.py
simple_pcd_viewer/: __init__.py  controller.py  csv_data_provider.py  csv_visualizer.py  data_process.py  geometry_provider.py  pcd_data_config.py  pcd_file_provider.py  process_data.py  process_pcd_ui.py  tk_controller.py  window.py
simple_pcd_viewer/single/: __init__.py  single_data_provider.py  single_frame_visualizer.py
